--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,6 +9,8 @@ jobs:
   build:
     name: Build APK
     runs-on: ubuntu-latest
+    if: "!contains(github.event.head_commit.message, 'skip-publish')"
+
     steps:
       - uses: actions/checkout@v2
       - name: Setup Java
